# unit-converter-desktop-mobile

./: DOCUMENTATION.md  LICENSE  README.md  index.html
unitConverter-desktop/: README.md  architecture.md  main.py  pyproject.toml
unitConverter-desktop/docs/: architecture.md
unitConverter-desktop/src/i18n/: translations.py
unitConverter-desktop/src/models/: unit.py
unitConverter-desktop/src/operations/: temperature_operations.py  time_operations.py  volume_operations.py
unitConverter-desktop/src/services/: search_service.py
unitConverter-desktop/src/viewmodels/: converter_viewmodel.py  preferences_viewmodel.py  search_viewmodel.py
unitConverter-desktop/src/views/: desktop_view.py  styles.py
unitConverter-desktop/tests/e2e/: test_e2e_desktop.py
unitConverter-desktop/tests/unit/: test_models.py  test_services.py
unitConverter-mobile/: .gitignore  README.md  architecture.md  main.py  pyproject.toml
unitConverter-mobile/docs/: architecture.md
unitConverter-mobile/src/models/: category.py  conversion_result.py
unitConverter-mobile/src/operations/: __init__.py  area_operations.py  length_operations.py  weight_operations.py
unitConverter-mobile/src/services/: converter_service.py
unitConverter-mobile/src/views/: mobile_view.py
unitConverter-mobile/tests/e2e/: test_e2e_mobile.py
unitConverter-mobile/tests/integration/: test_integration.py
unitConverter-mobile/tests/unit/: test_i18n.py  test_models.py  test_operations.py  test_services.py  test_viewmodels.py
unitConverter-mobile/unitconverter/: __main__.py
unitConverter-mobile/unitconverter/models/: category.py
unitConverter-mobile/unitconverter/operations/: __init__.py  area_operations.py  length_operations.py  temperature_operations.py  time_operations.py  volume_operations.py  weight_operations.py
unitConverter-mobile/unitconverter/services/: converter_service.py  search_service.py
unitConverter-mobile/unitconverter/viewmodels/: converter_viewmodel.py  event_mixin.py  preferences_viewmodel.py  search_viewmodel.py
unitConverter-mobile/unitconverter/views/: mobile_view.py  styles.py  toga_view.py
