[project]
name = "unitconverter-desktop"
version = "1.0.0"
description = "Desktop Unit Converter application with PySide6 (Qt)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
]

[project.scripts]
unitconverter-desktop = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.pyinstaller]
# PyInstaller configuration for binary builds
name = "UnitConverter-Desktop"
onefile = true
windowed = true
icon = "src/assets/icon.ico"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.3.0",
    "selenium>=4.15.0",
    "pyinstaller>=6.0.0",
]
